force-app/main/default/objects/Status_Report__c/Status_Report__c.object-meta.xml
<CustomObject>
    <description>Status reports are a great way to formalize the progress of a project at the individual team member level.  Through reports and dashboards, summary reporting can help a project manager quickly gather information and export to excel as needed.</description>
    <label>Status Report</label>
    <nameField>
        <displayFormat>SR-{YYYY}{MM}-{0}</displayFormat>
        <label>Status Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>