force-app/main/default/objects/Status_Report__c/fields/Accomplishments__c.field-meta.xml
<CustomField>
    <fullName>Accomplishments__c</fullName>
    <label>Accomplishments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>