force-app/main/default/objects/Status_Report__c/fields/Engagement_Summary__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Summary__c</fullName>
    <label>Status Report Due Date</label>
    <type>Date</type>
</CustomField>