force-app/main/default/objects/Status_Report__c/fields/Open_Items__c.field-meta.xml
<CustomField>
    <fullName>Open_Items__c</fullName>
    <label>Open Items</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>