force-app/main/default/objects/Status_Report__c/fields/Planned_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Planned_Deliverables__c</fullName>
    <label>Planned Deliverables</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>