force-app/main/default/objects/Status_Report__c/fields/Potential_Risks__c.field-meta.xml
<CustomField>
    <fullName>Potential_Risks__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if there are any potential risks that came up during this assignment.  Please describe the risks using the &quot;risks&quot; tab.</inlineHelpText>
    <label>Potential Risks</label>
    <type>Checkbox</type>
</CustomField>