force-app/main/default/objects/Status_Report__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>PPM_Project__c</referenceTo>
    <relationshipLabel>Status Reports</relationshipLabel>
    <relationshipName>R00N80000002lZ2OEAU</relationshipName>
    <type>Lookup</type>
</CustomField>