force-app/main/default/objects/Status_Report__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member Assignment</label>
    <referenceTo>Team_Member__c</referenceTo>
    <relationshipLabel>Status Reports</relationshipLabel>
    <relationshipName>R00N80000002lZ17EAE</relationshipName>
    <type>Lookup</type>
</CustomField>